# edog_eurobot2024_ros2

./: .gitignore  README.md
src/actuator_package/: package.xml  setup.cfg  setup.py
src/actuator_package/actuator_package/: actuator_service.py  arm_service.py
src/aruco_detector/: package.xml  setup.cfg  setup.py
src/aruco_detector/aruco_detector/: __init__.py  aruco_detector.py  raspi-config_20211019_all.deb  test.py
src/control_package/: README.md  package.xml  setup.cfg  setup.py
src/control_package/control_package/: config.rviz  lidar_filter.py  motion_service.py
src/control_package/resource/: actuatorConfig.json  armConfig.json  calibration.json  default_odrive_config.json  emergency_odrive_config.json  normal_odrive_config.json  robot_config.json  slow_odrive_config.json
src/hardware_package/: package.xml  setup.cfg  setup.py
src/hardware_package/hardware_package/: led_service.py  reset1_publisher.py  tirette_publisher.py
src/ia_package/: package.xml  setup.cfg  setup.py
src/ia_package/ia_package/: ia_node.py  voice_service.py
src/ia_package/resource/: blue.json  gopro.json  graper.json  green.json  homologation.json  led.json  one_meter.json  solar.json  strat-bleu copy.json  strat-bleu.json  strat-bleu.json.old  strat.json  test.json  timer.json  unstack.json
src/launcher/: CMakeLists.txt  package.xml
src/launcher/launch/: robot.launch.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: CmdPositionResult.msg  MotionCompleteResponse.msg  (+1 more)
ui/launcher/: main.py  wget-log
ui/map/: main.py  map.py
(+17 files in other folders)
