<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gaultier.lecail@gmail.com">edog</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hardware_package</exec_depend>
  <exec_depend>control_package</exec_depend>
  <exec_depend>actuator_package</exec_depend>
  <exec_depend>ia_package</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
